Rename to ctf2ctf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(lttng_to_chrome VERSION 0.1)
+project(ctf2ctf VERSION 0.1)
 
 if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/args/args.hxx" )
     if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
@@ -31,5 +31,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic")
 
-add_executable(lttng_to_chrome lttng_to_chrome.cpp clioptions.cpp)
-target_link_libraries(lttng_to_chrome ${BABELTRACE_LIBRARIES} -lstdc++fs)
+add_executable(ctf2ctf ctf2ctf.cpp clioptions.cpp)
+target_link_libraries(ctf2ctf ${BABELTRACE_LIBRARIES} -lstdc++fs)
