--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
 
 find_package(Babeltrace REQUIRED)
+find_package(Qt5 COMPONENTS Gui)
 include_directories(${BABELTRACE_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
@@ -31,5 +32,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic")
 
+configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
+
 add_executable(ctf2ctf ctf2ctf.cpp clioptions.cpp)
 target_link_libraries(ctf2ctf ${BABELTRACE_LIBRARIES} -lstdc++fs)
+
+if (Qt5Gui_FOUND)
+    target_link_libraries(ctf2ctf Qt5::Gui)
+endif()
