Move args submodule into 3rdparty folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,23 @@
 cmake_minimum_required(VERSION 3.0)
 project(ctf2ctf VERSION 0.1)
 
-if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/args/args.hxx" )
-    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
-        message( FATAL_ERROR
-            "The args git submodule is not initialized.\n"
-            "Please run the following commands in the source directory (${PROJECT_SOURCE_DIR}):\n"
-            "    git submodule update --init --recursive\n"
-        )
-    else()
-        message( FATAL_ERROR
-            "The args submodule is missing - please report a broken source package.\n"
-        )
+function(check_submodule NAME SUBMODULE_PATH)
+    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${SUBMODULE_PATH}" )
+        if (EXISTS "${PROJECT_SOURCE_DIR}/.git")
+            message(FATAL_ERROR
+                "The ${NAME} git submodule is not initialized.\n"
+                "Please run the following commands in the source directory (${PROJECT_SOURCE_DIR}):\n"
+                "    git submodule update --init --recursive\n"
+            )
+        else()
+            message(FATAL_ERROR
+                "The ${NAME} submodule is missing - please report a broken source package.\n"
+            )
+        endif()
     endif()
-endif()
+endfunction()
+
+check_submodule("args" "3rdparty/args/args.hxx")
 
 if(NOT CMAKE_BUILD_TYPE)
   message(STATUS "Setting build type to 'RelWithDebInfo' as none was specified.")
@@ -24,7 +28,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/mod
 
 find_package(Babeltrace REQUIRED)
 find_package(Qt5 COMPONENTS Gui)
-include_directories(${BABELTRACE_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${BABELTRACE_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} 3rdparty/)
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set(CMAKE_CXX_STANDARD 17)
