Cleanup FindBabeltrace.cmake to remove warnings
Fixes:
```
CMake Warning (dev) at /usr/share/cmake-3.22/Modules/FindPackageHandleStandardArgs.cmake:438 (message):
  The package name passed to `find_package_handle_standard_args` (BABELTRACE)
  does not match the name of the calling package (Babeltrace).  This can lead
  to problems in calling code that expects `find_package` result variables
  (e.g., `_FOUND`) to follow a certain pattern.
Call Stack (most recent call first):
  cmake/modules/FindBabeltrace.cmake:57 (FIND_PACKAGE_HANDLE_STANDARD_ARGS)
  CMakeLists.txt:29 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
 configure_file(ctf2ctf-gz.sh.in ${CMAKE_CURRENT_BINARY_DIR}/ctf2ctf-gz @ONLY)
 
 add_executable(ctf2ctf ctf2ctf.cpp clioptions.cpp)
-target_link_libraries(ctf2ctf ${BABELTRACE_LIBRARIES} -lstdc++fs)
+target_link_libraries(ctf2ctf ${Babeltrace_LIBRARIES} -lstdc++fs)
 
 if (Qt5Gui_FOUND)
     target_link_libraries(ctf2ctf Qt5::Gui)
